--- a/love/love.html
+++ b/love/love.html
@@ -20,22 +20,40 @@
             <div class="boxSlider">
                     <div class="listSlider">
                         <div class="slider">
-                            <img src="../image/KD01.jpg" alt="">
+                            <img src="../image/KT01.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/KD02.jpg" alt="">
+                            <img src="../image/KT02.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/KD03.jpg" alt="">
+                            <img src="../image/KT03.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/KD04.jpg" alt="">
+                            <img src="../image/KT04.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/KD05.jpg" alt="">
+                            <img src="../image/KT05.jpg" alt="">
                         </div>
                         <div class="slider">
-                            <img src="../image/KD06.jpg" alt="">
+                            <img src="../image/KT06.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT07.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT08.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT09.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT10.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT11.jpg" alt="">
+                        </div>
+                        <div class="slider">
+                            <img src="../image/KT12.jpg" alt="">
                         </div>
                     </div>
                 <div class="left">
